# btree-data-manager

./: CMakeLists.txt  README.md
allocator/: CMakeLists.txt
allocator/allocator/: CMakeLists.txt
allocator/allocator/include/: allocator.h
allocator/allocator/src/: allocator.cpp
allocator/allocator_boundary_tags/: CMakeLists.txt
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_buddies_system/: CMakeLists.txt
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_global_heap/: CMakeLists.txt
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_red_black_tree/: CMakeLists.txt
allocator/allocator_red_black_tree/include/: allocator_red_black_tree.h
allocator/allocator_red_black_tree/src/: allocator_red_black_tree.cpp
allocator/allocator_sorted_list/: CMakeLists.txt
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
associative_container/: CMakeLists.txt
associative_container/include/: associative_container.h
associative_container/search_tree/: CMakeLists.txt
associative_container/search_tree/include/: search_tree.h
associative_container/search_tree/indexing_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_tree/include/: b_tree.h
common/: CMakeLists.txt
common/include/: extra_utility.h  file_cannot_be_opened.h
common/src/: extra_utility.cpp  file_cannot_be_opened.cpp  not_implemented.cpp
dbms/: CMakeLists.txt
dbms/client/: CMakeLists.txt  client.cpp
dbms/common_types/: CMakeLists.txt
dbms/common_types/include/: flyweight.h  ipc_data.h  tdata.h
dbms/common_types/src/: tdata.cpp
dbms/database/include/: database.h
dbms/db_storage/: CMakeLists.txt
dbms/db_storage/include/: db_storage.h
dbms/db_storage/server/: CMakeLists.txt  db_storage_server.cpp
dbms/db_storage/src/: db_storage.cpp
dbms/manager_server/: CMakeLists.txt  manager_server.cpp
logger/: CMakeLists.txt
logger/client_logger/: CMakeLists.txt
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: CMakeLists.txt  client_logger_tests.cpp  config_example.json
logger/linux_logging_server/: CMakeLists.txt
logger/linux_logging_server/src/: linux_logging_server.cpp
logger/logger/: CMakeLists.txt
logger/logger/include/: logger.h
logger/logger/src/: logger.cpp
logger/server_logger/: CMakeLists.txt
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
